--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
 rootProject.name = 'rim-tool'
+
+includeBuild('hirs') {
+    dependencySubstitution {
+        substitute(module('org.hirs:HIRS_Utils')).using(project(':HIRS_Utils'))
+    }
+}
