issue_8: Add checkstyle and spotbugs in build + fix warnings

--- a/gradle/versions.toml
+++ b/gradle/versions.toml
@@ -2,6 +2,8 @@
 bouncyCastleVersion = "1.79"
 jcommanderVersion = "2.0"
 lombokVersion = "1.18.36"
+
+#test dependencies versions
 springBootVersion = "3.4.1"
 
 [libraries]
