--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'java'
     id 'checkstyle'
     id 'com.github.spotbugs' version '6.0.13'
+    id 'com.netflix.nebula.ospackage' version '11.10.0'
 }
 
 subprojects {
