--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ theme:
         name: Switch to system preference
   features:
     - content.code.copy
+    - content.footnote.tooltips
     - navigation.indexes
     - navigation.expand
     - navigation.sections
